--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -1,3 +1,4 @@
 .content {
   width: 100%;
+  z-index: 1;
 }
