--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -7,4 +7,6 @@
   align-items: center;
   opacity: 47%;
   user-select: text;
+  z-index: 2;
+  position: relative;
 }
